--- a/_assets/css/emotion-base.css
+++ b/_assets/css/emotion-base.css
@@ -1,11 +1,18 @@
-/* CSS Document */
 .etWidget select, .etWidget label {
-	display:block;
-	width:100%;
+  display:block;
+  width:100%;
 }
 .etWidget label {
-	margin-bottom:5px;
+  margin-bottom:5px;
 }
 .etWidget select {
-	margin-bottom:10px;
+  margin-bottom:10px;
+}
+.etWidget header {
+  display:block !important;
+  padding:20px;
+  text-align:center;
+}
+.etWidget .etContent {
+  padding:20px;
 }
