--- a/_assets/css/emotion-style.css
+++ b/_assets/css/emotion-style.css
@@ -1,14 +1,22 @@
 .etWidget header {
   background-color:#000;
 }
-.etWidget {
+.etWidget, .etResult {
   background-color:#fff;
   border:1px solid #efefef;
+  margin-bottom:10px;
+  font-size:0.8em;
 }
-.etWidget h1 {
+.etWidget h1, .etResult h1 {
   font-size:1.5em;
   margin:5px 0px;
+}
+.etWidget h1 {
   color:#fff;
+}
+.etWidget h2, .etResult h2 {
+  font-size:1.3em;
+  margin:5px 0px;
 }
 .etWidget select {
   border:1px solid #ccc;
@@ -17,6 +25,11 @@
   border-radius:5px;
   padding:5px 10px;
 }
+.etShowVehicleButton input {
+  font-size:1.5em;
+  font-weight:bold;
+  padding:3px 10px;
+}
 .etError {
   background-color:#cc0000;
   color:#fff;
@@ -24,4 +37,11 @@
 }
 .etError a {
   color:#fff;
+}
+.etResult table tr:nth-child(odd) td {
+  background-color:#efefef;
+}
+.etStage .etStageDesc {
+  border-left:3px solid #ccc;
+  padding-left:5px;
 }
