--- a/_assets/css/etct-style.css
+++ b/_assets/css/etct-style.css
@@ -1,7 +1,7 @@
 .etWidget header {
   background-color:#000;
 }
-.etWidget, .etResult {
+.etWidget, .etResult, .etRequestQuote {
   background-color:#fff;
   border:1px solid #efefef;
   margin-bottom:10px;
@@ -14,18 +14,18 @@
 .etWidget h1 {
   color:#fff;
 }
-.etWidget h2, .etResult h2 {
+.etWidget h2, .etResult h2, .etRequestQuote h2 {
   font-size:1.3em;
   margin:5px 0px;
 }
-.etWidget select {
+.etWidget select, .etFullWidth, .etRequestQuote select {
   border:1px solid #ccc;
   -webkit-border-radius:5px;
   -moz-border-radius:5px;
   border-radius:5px;
   padding:5px 10px;
 }
-.etShowVehicleButton input {
+.etSubmitButton input {
   font-size:1.5em;
   font-weight:bold;
   padding:3px 10px;
@@ -33,7 +33,9 @@
 .etError {
   background-color:#cc0000;
   color:#fff;
-  padding:5px 10px;
+}
+.etNotice {
+  background-color:#fff3b9;
 }
 .etError a {
   color:#fff;
@@ -44,4 +46,7 @@
 .etStage .etStageDesc {
   border-left:3px solid #ccc;
   padding-left:5px;
+}
+.etRequired {
+  color:#f00;
 }
