--- a/_assets/css/etct-microsite.css
+++ b/_assets/css/etct-microsite.css
@@ -11,3 +11,18 @@ body {
   padding:30px;
   background-color:#fff;
 }
+.bigContainer {
+  width:1100px;
+  margin:100px auto 0px auto;
+}
+.bigContainer .leftCol {
+  float:left;
+  width:29%;
+}
+.bigContainer .rightCol {
+  float:right;
+  width:69%;
+}
+.clearfix {
+  clear:both;
+}
